# ChangeLog for app-emulation/open-vm-tools-kmod
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/open-vm-tools-kmod/ChangeLog,v 1.43 2013/12/31 17:03:48 tomwij Exp $

  31 Dec 2013; Tom Wijsman <TomWij@gentoo.org> -files/fragsize.patch:
  [QA] Remove unused files.

  22 Oct 2013; Mike Gilbert <floppym@gentoo.org>
  open-vm-tools-kmod-2013.09.16.1328054.ebuild,
  open-vm-tools-kmod-9.4.0.1280544.ebuild:
  vmhgfs does not compile with CONFIG_UIDGID_STRICT_TYPE_CHECKS, bug 474636.

  21 Oct 2013; Mike Gilbert <floppym@gentoo.org> +files/vmhgfs-linux-3.11.patch,
  open-vm-tools-kmod-2013.09.16.1328054.ebuild:
  Add patch to fix vmhgfs in linux-3.11, bug 488648.

*open-vm-tools-kmod-9.4.0.1280544 (19 Oct 2013)

  19 Oct 2013; Mike Gilbert <floppym@gentoo.org>
  +open-vm-tools-kmod-9.4.0.1280544.ebuild:
  Add latest upstream stable version.

  19 Oct 2013; Mike Gilbert <floppym@gentoo.org>
  open-vm-tools-kmod-2013.09.16.1328054.ebuild:
  Move module logic to pkg_setup and add checks for mainline config options.

  19 Oct 2013; Mike Gilbert <floppym@gentoo.org> +files/60-vmware.rules,
  -open-vm-tools-kmod-2012.10.14.874563.ebuild,
  -open-vm-tools-kmod-2012.12.26.958366.ebuild,
  -open-vm-tools-kmod-8.8.2.590212-r1.ebuild,
  -open-vm-tools-kmod-9.2.2.893683.ebuild,
  open-vm-tools-kmod-2013.09.16.1328054.ebuild:
  Move udev rules file to FILESDIR and install with udev.eclass. Remove old
  ebuilds.

*open-vm-tools-kmod-2013.09.16.1328054 (19 Oct 2013)

  19 Oct 2013; Mike Gilbert <floppym@gentoo.org>
  +open-vm-tools-kmod-2013.09.16.1328054.ebuild:
  Version bump. Exclude modules based on kernel version; thanks to Tomas Mozes
  for the idea.

  24 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  open-vm-tools-kmod-2013.04.16.1098359.ebuild:
  Fix patch name.

  24 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  +files/1098359-vmblock-3.10.0.patch,
  open-vm-tools-kmod-2013.04.16.1098359.ebuild: