@@ -6,22 +6,16 @@ AUX 60-vmware.rules 42 SHA256 5e2a610bd563961d45fd20cbc6f832898006fdf74cf73cf1d4
 AUX frozen.patch 1155 SHA256 5997f5aa4d1d2bb262b9ef24888d4706f1227af4d359862d3d49b4e6c961d193 SHA512 5dbee1a119d6abd13b8217d66b8f611fee92c863b0d48029b1c05f33a06f6a20f35eaf6f01fb268a811270c6c799a1fef26939f7bfc97a42421e7f14b4cfa46d WHIRLPOOL 34244123ac2eebe6aa9d144f2af12304c1355f455b4b04b15ff5f949ffa0b23c62d40436b16371e3c5055b94afd51b2dd9ea3f92864d4f597c9b568814e3fa48
 AUX putname.patch 430 SHA256 dccba065f71f7a27dd7d38e3eb7d1de9e87b82a18db618538054043829c5d961 SHA512 4a6da3c33bdd4b03ed7cf536c40c18d76a902687378e85cce08cf9ef9b23ae6ccedb0d334f69daee3588e6e83c080adce456f36fad69848e7089401052c4d2c2 WHIRLPOOL 7b81aae3e2f4cab193cffcb1f07122b7d030110b94532af15ba373a38b1e963510958de85f301a543cd0df5d91fa7bc4794b5fc5af01d23988df423378ebaabf
 AUX vmhgfs-linux-3.11.patch 1399 SHA256 e4b1100ebf2928d4c503b36fa9a83f42bc5ca91bd7ef57d43de5511a7eb35069 SHA512 aa2de071205419d2fca9e76a4d1004241200a8f2f89157e0f08b04f74eafcabde254b706da6c3745fb44d389b1b094019857786351a07599ff9d28f8a47be0f8 WHIRLPOOL 2c2b86973ba13d01d3582f7d374936da9c210358c27e78adb3bf302c9a19c83ddf1eaa8b8e48d4c66a309c7841b893264a396f6134ee1fcf464e9cf2956f7331
-DIST open-vm-tools-2013.04.16-1098359.tar.gz 3737845 SHA256 fc939de4133d66c0cced8d0a7b5d87edcad3f598393b71c341e66bfec5087960 SHA512 682c25e315e3108617fd4d419f5bba8bf45f4966f13fa60944650390f63af2a7e4fcf740052106693403fcc2ec6f8b126e9911cbba044fc227f0c663e19f68e0 WHIRLPOOL eb13974f1e0a837617fad8c49f45e73570b343071c0619cc8408b5b9812e135cd9eafffc35a761740a58875c3e5583c625300398346d5863a2fa468044f6dd5f
 DIST open-vm-tools-2013.09.16-1328054.tar.gz 3793719 SHA256 470a6ea3ce14c2c5ea6b7bc59745eccbacc8d88a3f343e712312786435975d13 SHA512 7ae62d5411b4bdefd0e8db5f0a81bb357bfd4a624af06bf9a5a74f49ede0b7051b41dfe548c758fd7e73cded34af983c8aa0c412e65343092e05ae9b997895cb WHIRLPOOL 688fb4e494fb7aab7d0eb09189afff95ec8727bcc1893a4ec632bb8198661a1a55d58a813d2d56a3ac330fd7a55afc1fa7dc11f1d60c06c91ecf6a0bf866b249
 DIST open-vm-tools-9.4.0-1280544.tar.gz 3659504 SHA256 5d30652eb0f6dc5e930781029c184837e700be5543b6a7116db4c62a6f3ca399 SHA512 07b36f49713140606f74864b59c2e01c9ed83a960dd3f5d172b84fc75e760f7370065774a0e26897924af60454c86b682ca0fd32276b0e9fb17b268247f8cbdf WHIRLPOOL 88533768cf718de3b5f64e688597209fa2029d02cdf350d7fd05ec8dd8ca0f0c125a8d1445c1ec9287bc486076d5c335f3cc615c3f0b9aa7bac84e921da4c9e6
-EBUILD open-vm-tools-kmod-2013.04.16.1098359.ebuild 1805 SHA256 904f03a7e1c24db74076a5661305910115350a86c0738a72f628f1414bc5e842 SHA512 ed8bc3f4292a34ffb0a9690d1e39daba9f3a6f2637a5a5d958d7fdf8671f2634745f081d01e05d53ae2f33abe91d231be42f6497a6833ca6bebf9b2ed6d7ff28 WHIRLPOOL cc66d89cd8a419d95dbe83081791bd0a7a1534ff7ba68d159df6507e19ee8ae0facf8ee2438406c578f746e515cbe09800b06ddcb01d360c85e0d63511a47227
-EBUILD open-vm-tools-kmod-2013.09.16.1328054.ebuild 1433 SHA256 e5f4b3d259004e01c9ed458213f6668a03ee61a61fbdc5ab3c6a5afd604fb842 SHA512 0e728ffa590db073c3dc21bb5f20e978887f1be97081742c18f482f995b8fe4ac4f59e03cc81c5bf838730c89162f866159f1df085a4785dc87837b1586a9472 WHIRLPOOL 2401b0609740014dd5677f753968dfef451f8486fd8573b741f9750b1eee63fb2eb12c6954a713ba065c474634122ebcc1f6647e19547ed4b7aca22d73f0ee73
+EBUILD open-vm-tools-kmod-2013.09.16.1328054.ebuild 1467 SHA256 cab965060758f4631037af1c506799841a6c177c6648fc8c55629504edf7d13c SHA512 a62a2ab1aec534c76dcd926a712ea8117aeff542b2aa7a062967329e79380261d365ed5b4d45e9d37f4a161104df8eebfb34cc37a24ea907f85a3b50f9a2b36a WHIRLPOOL 2e375657ae612f0b990e91364faf489da39865ad9bd1582683b66a6cabc809863186c946f5c397e13e1d1ab2dc9ee50f72cbcb313cc336ae189da984054e9d1f
 EBUILD open-vm-tools-kmod-9.4.0.1280544.ebuild 1454 SHA256 3e52033548f8196ebd0c90eab23e3325333fcf65c06100dde65bff36b97983cd SHA512 dd04d11089a59a27a19396c6fd895fc8b049d7ef5e55b7d333b79e5a030771d3f85677fe494a34c7ca133da774131135f978ff289ca2ad5d9c2c50abf7164b30 WHIRLPOOL 89005c93c16e6cb58374d28f5eab24678bc8b74f30dc43910775e1ab4e2a68d9d3babd38e7fcc8004b29060238bc925b2ad9d858e0e9833911082ecd4f98de4b
-MISC ChangeLog 8884 SHA256 eef310583086380cd2695fe9dba106f3715d4277d16b7dd7b869dc2c64ce7ab6 SHA512 5c82ac242a7ab74d265a3d9b07775a148db5fc9e613796b6468825edf889e6d371a7e3fe1d0ab8061d8035eb45180591a29c60b85b4422ea3d0ff1a1da26a6e2 WHIRLPOOL 646cdd786e54aa0bd9e159b3eba066fec781aa4dbcf12d01e4ac76235ce94c6ebb6e2e73416639924cbd6d0076e20adcabb89253e3ebe740617d610fa2e383ce
-MISC metadata.xml 439 SHA256 0d83c61a0bd4e45720f5c6052187d0aa236c246c330934533e7dffcc7668b2c6 SHA512 4080043ebdc6e0a172cd290a7c59dd2482a2bae3b00fc1d845b58e7e390d80e8db9d5311e473e1e384560026b6bc6c1dfcec84785b145047e08ed56c05829112 WHIRLPOOL 81b28c9e864047c0fccc948ac2f256546677b934d44830d084d3174458ffcbf8e092617b289af650840bfb1c66e4d8a8d246c1794b031aee84318ea1c846079b
+MISC ChangeLog 9099 SHA256 3a841dad80df94968668b57e372a40a7dcd6010649b9bc614b3c6c0e8801c486 SHA512 34c604d7091396c5da53a87843acd76bad2f88b846d175b38011fdb7c18da6996317df5054b41791a072a86f9cde07890e296120aa3b8c153a1fc168343ae474 WHIRLPOOL 265113c16df8b1aa66bd1fc6ca71e64a816b3a3038a20d0877f483b90eb448b31cc06c1d790275107df5a588cd47ba89b9b28ec87646151acdbb1f8173a4f4af
+MISC metadata.xml 546 SHA256 7bfa53b6b6294a07a8dd7f369c3f44950371d6c0c35249239933ad5c16242997 SHA512 8106ae94d2d1db358a6d66188ed58282bec6ff01f94e90dd250e74a432d9cf4efaf7d87bf7b8ae56b41b05bfdc24beb0fb4c6fe392c4013dc2c35abfeb1325fa WHIRLPOOL a40c65bf2e698a2c7a9ce8e0a0a6a8149bec96ceb2977da8ba65c5f7f50ce464652b3e2dc9979c1a5569f9dc4e9e167152be637e6d9f0b98c4b2bc89f2b84846
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJSwvjeAAoJEJWyH81tNOV9mWsH/1vcX0JWKU4ZGEjC8SqpnkQa
-fqA+8zboAfQZTda4L97Wxh4TkCCj2VD11khhqQY05nB14KyewAQwzZonZe0TlZWC
-eLLGmFWzvwjfd3u27nw4K8nGD6nKoLwDw5L9874FXyni1j6cj5+XERqK2cpZhH/2
-CgzLY7rvE5tJ4/GKQbmVOFTXGC5Wwid/+tkwUIjD4rSsGWxJJo7uMcArgi/W/vDi
-qqM05ULJBH9J+Ke0yykL0NQCxAcqCsdBjPfsHrdSFaGI9mJwIMj/D3mKsu+o1KoG
-iCNO9IBhR9tAyscK6lh0XB0oXYb/InoOiqdw7Vkid3C/XJ6e6zBSfNnExyB5JmM=
-=3xKJ
+iF4EAREIAAYFAlPnm0kACgkQC77qH+pIQ6SBWgD/RI5YoIhbzuBcnjIltXIWVlrD
+Hd2dTHEwk9nLxPJAm9YA/20aP/DxSGXBz05JlS66hDbGrJh+PGpIjCCpDLIs9Ars
+=5mgi
 -----END PGP SIGNATURE-----
