@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup
-DEPEND=virtual/linux-sources kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/linux-sources )
-DESCRIPTION=Opensourced tools for VMware guests
-EAPI=4
-HOMEPAGE=http://open-vm-tools.sourceforge.net/
-IUSE=kernel_linux
-KEYWORDS=~amd64 ~x86
-LICENSE=LGPL-2
-RDEPEND=kernel_linux? ( virtual/modutils )
-SLOT=0
-SRC_URI=mirror://sourceforge/open-vm-tools/open-vm-tools-2013.04.16-1098359.tar.gz
-_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	linux-info	2b8c53f6065bdee2d757472215a3088f	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f1fd4a3abb28c6ab0996bef74a9880f3
