@@ -3,11 +3,11 @@ DEPEND=kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/l
 DESCRIPTION=Opensourced tools for VMware guests
 EAPI=5
 HOMEPAGE=http://open-vm-tools.sourceforge.net/
-IUSE=kernel_linux
+IUSE=vmhgfs kernel_linux
 KEYWORDS=~amd64 ~x86
 LICENSE=LGPL-2
 RDEPEND=kernel_linux? ( virtual/modutils )
 SLOT=0
 SRC_URI=mirror://sourceforge/open-vm-tools/open-vm-tools-2013.09.16-1328054.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	linux-info	2b8c53f6065bdee2d757472215a3088f	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=09c84f97cda8af7fd19dcdf46f22c747
+_md5_=da7009ac0976b3d544ecca9e9eef8730
