@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/open-vm-tools-kmod
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/open-vm-tools-kmod/ChangeLog,v 1.43 2013/12/31 17:03:48 tomwij Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/open-vm-tools-kmod/ChangeLog,v 1.44 2014/08/10 16:18:12 floppym Exp $
+
+  10 Aug 2014; Mike Gilbert <floppym@gentoo.org>
+  -open-vm-tools-kmod-2013.04.16.1098359.ebuild, metadata.xml,
+  open-vm-tools-kmod-2013.09.16.1328054.ebuild:
+  Add use flag to control building of vmhgfs module.
 
   31 Dec 2013; Tom Wijsman <TomWij@gentoo.org> -files/fragsize.patch:
   [QA] Remove unused files.
